Name:              hip
Version:           1.5.0.0
License:           BSD3
License-File:      LICENSE
Author:            Alexey Kuleshevich
Stability:         experimental
Maintainer:        lehins@yandex.ru
Category:          Image Processing, Graphics
Synopsis:          Haskell Image Processing (HIP) Library.
Description:
            .
            Haskell Image Processing (HIP) Library provides an easy to use interface with a whole variaty of image manipulation capabilities.
            .
            Processing can be done sequentially as well as in parallel, with an inherited fusion capabily, all through <https://hackage.haskell.org/package/repa repa> and <https://hackage.haskell.org/package/vector vector> packages. It is highly extendable, with an ability to add various color spaces or provide implementations for underlying array like custom data structures.
            .
            It is capable of reading and writing a number of popular image formats by using <https://hackage.haskell.org/package/JuicyPixels JuciyPixels> and <https://hackage.haskell.org/package/netpbm netpbm> packages. Being a pure Haskell library it does not require any external programs, although it can display images using a program of your choice.
Homepage:          https://github.com/lehins/hip
Bug-Reports:       https://github.com/lehins/hip/issues
Cabal-Version:     >= 1.10
Build-Type:        Simple
Extra-Doc-Files:   images/*.jpg
                 , images/*.png
                 , images/*.svg
                 , README.md
                   CHANGELOG.md
Library
  Default-Language: Haskell2010
  HS-Source-Dirs: src

  Build-Depends: base            >= 4.5 && < 5
               , bytestring      >= 0.9.0.4
               , Chart           >= 1.5
               , Chart-diagrams  >= 1.5
               , colour          >= 2.3.3
               , deepseq         >= 1.1
               , directory       >= 1.2.2.0
               , filepath        >= 1.0
               , JuicyPixels     >= 3.2.7
               , netpbm          >= 1.0.1
               , primitive       >= 0.4
               , process         >= 1.1.0.0
               , repa            >= 3.2.1.1 && < 4
               , temporary       >= 1.1.1
               , vector          >= 0.10
  Other-Extensions: BangPatterns
                  , ConstraintKinds
                  , CPP
                  , FlexibleContexts
                  , FlexibleInstances
                  , FunctionalDependencies
                  , MultiParamTypeClasses
                  , ScopedTypeVariables
                  , TypeFamilies
                  , UndecidableInstances
                  , ViewPatterns
  Exposed-Modules: Graphics.Image
                 , Graphics.Image.ColorSpace
                 , Graphics.Image.IO
                 , Graphics.Image.IO.Formats
                 , Graphics.Image.IO.Histogram
                 , Graphics.Image.Interface
                 , Graphics.Image.Interface.Repa
                 , Graphics.Image.Interface.Vector
                 , Graphics.Image.Processing
                 , Graphics.Image.Processing.Binary
                 , Graphics.Image.Processing.Complex
                 , Graphics.Image.Types
  Other-Modules:   Graphics.Image.ColorSpace.Binary
                 , Graphics.Image.ColorSpace.CMYK
                 , Graphics.Image.ColorSpace.Complex
                 , Graphics.Image.ColorSpace.HSI
                 , Graphics.Image.ColorSpace.RGB
                 , Graphics.Image.ColorSpace.X
                 , Graphics.Image.ColorSpace.Y
                 , Graphics.Image.ColorSpace.YCbCr
                 , Graphics.Image.IO.Base
                 , Graphics.Image.IO.Formats.JuicyPixels
                 , Graphics.Image.IO.Formats.Netpbm
                 , Graphics.Image.Interface.Repa.Generic
                 , Graphics.Image.Interface.Repa.Storable
                 , Graphics.Image.Interface.Repa.Unboxed
                 , Graphics.Image.Interface.Repa.Helpers
                 , Graphics.Image.Interface.Vector.Generic
                 , Graphics.Image.Interface.Vector.Storable
                 , Graphics.Image.Interface.Vector.Unboxed
                 , Graphics.Image.Interface.Vector.Unboxing
                 , Graphics.Image.Processing.Convolution
                 , Graphics.Image.Processing.Complex.Fourier
                 , Graphics.Image.Processing.Geometric
                 , Graphics.Image.Processing.Interpolation
  GHC-Options:     -Wall
  if os(windows)
    CPP-Options:      -DOS_Win32
  else
    if os(linux)
      CPP-Options:    -DOS_Linux
    else
      if os(darwin)
        CPP-Options:  -DOS_Mac

Test-Suite hip-tests
  Type:               exitcode-stdio-1.0
  HS-Source-Dirs:     tests
  Main-Is:            Spec.hs
  Other-Modules:      Graphics.Image.ColorSpaceSpec
                    , Graphics.Image.ProcessingSpec
                    , Graphics.Image.Processing.BinarySpec
                    , Graphics.Image.InterfaceSpec
                    , Graphics.Image.Interface.VectorSpec
                    , Graphics.Image.IO.FormatsSpec
  Build-Depends:      base            >= 4.5 && < 5
                    , bytestring
                    , hip
                    , hspec
                    , QuickCheck
  Default-Language:   Haskell2010
  GHC-Options:        -Wall -threaded -with-rtsopts=-N


-- benchmark pixels-benchmarks
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      benchmarks
--   main-is:             Pixels.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
--   build-depends:       base
--                      , criterion
--                      , deepseq
--                      , hip
--                      , vector
--   default-language:    Haskell2010

-- benchmark pixels-memory
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      benchmarks/memory
--   main-is:             Pixels.hs
--   ghc-options:         -O2
--                        -- -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , criterion
--                      , deepseq
--                      , hip
--                      , weigh
--                      , vector
--                      , repa
--   default-language:    Haskell2010

-- benchmark interface-benchmarks
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      benchmarks
--   main-is:             Interface.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
--   build-depends:       base
--                      , criterion
--                      , deepseq
--                      , hip
--                      , vector
--   default-language:    Haskell2010

benchmark convolution-benchmarks
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmarks
  main-is:             Canny.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  --ghc-options:         -Odph -rtsopts -with-rtsopts=-N -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3
  build-depends:       base
                     , criterion
                     , deepseq
                     , repa
                     , hip
  default-language:    Haskell2010

Source-Repository head
  Type:     git
  Location: https://github.com/lehins/hip.git
