name:              hip
version:           1.0.0.0
license:           MIT
license-file:      LICENSE
author:            Alexey Kuleshevich
stability:         experimental
maintainer:        lehins@yandex.ru
category:          Image Processing
synopsis:          Haskell Image Processing (HIP) Library.
description:       The University of New Mexico's Haskell Image Processing library contains functionality for performing manipulations on binary, grayscale, color, and complex images. The library was designed for use in UNM's Digital Image Processing class but it can be used for a wide range of image processing purposes.
homepage:         https://github.com/lehins/hip
bug-reports:       https://github.com/lehins/hip/issues
cabal-version:     >= 1.10
build-type:        Simple
extra-doc-files:   images/*.jpg
                 , images/*.png

library
  hs-source-dirs: src
  build-depends:  JuicyPixels >= 3.1
                , accelerate >= 0.13.0.0
                , base >= 4.5 && < 5
                , bytestring >= 0.9.0.4
                , deepseq >= 1.1
                , easyplot >= 1.0
                , filepath >= 1.1
                , netpbm >= 1.0.1
                , primitive >= 0.4
                , process >= 1.1.0.0
                , random >= 1.1
                , repa   >= 3.2.1.1
                , temporary >= 1.1.1
                , vector >= 0.9 && < 0.11
                , vector-th-unbox >= 0.2.1.3
	  
  other-extensions: BangPatterns
                  , ConstraintKinds
                  , GADTs
                  , FlexibleContexts
                  , FlexibleInstances
                  , FunctionalDependencies
                  , MultiParamTypeClasses
                  , NoMonomorphismRestriction
                  , ScopedTypeVariables
                  , TypeFamilies
                  , ViewPatterns
                    
  exposed-modules: Graphics.Image
                 , Graphics.Image.Interface
                 , Graphics.Image.IO
                 , Graphics.Image.ColorSpace
                 , Graphics.Image.ColorSpace.Gray
                 , Graphics.Image.ColorSpace.RGB
                 , Graphics.Image.ColorSpace.HSI
                 , Graphics.Image.External
                 , Graphics.Image.Repa
                 , Graphics.Image.Repa.Internal
  other-modules:   Graphics.Image.External.Base
                 , Graphics.Image.External.JuicyPixels
                 , Graphics.Image.External.NetPbm
                   
--                 , Graphics.Image.Accelerate
--                 , Graphics.Image.Accelerate.Internal

  default-language: Haskell2010

  ghc-options:
              -Wall
              -O2
              -threaded
              -rtsopts
              "-with-rtsopts=-N"

executable example
  main-is:         Main.hs
  default-language: Haskell2010
  ghc-options:
              -Wall
              -O2
              -threaded
              -rtsopts
              "-with-rtsopts=-N"
  Build-Depends: base
               , hip
               , vector-th-unbox >= 0.2.1.3

source-repository head
  type:     git
  location: https://github.com/lehins/hip/hip/
