name:              hip
version:           2.0.0.0
license:           BSD3
license-file:      LICENSE
author:            Alexey Kuleshevich
stability:         experimental
maintainer:        alexey@kuleshevi.ch
category:          Image Processing, Graphics
synopsis:          Haskell Image Processing (HIP) Library.
description:
            .
            Haskell Image Processing (HIP) Library provides an easy to use interface with a
            whole variaty of image manipulation capabilities.
            .
            Processing can be done sequentially as well as in parallel, with an custom fusion capabily. Computation is done by <https://hackage.haskell.org/package/massiv massiv>. It is highly extendable, with an ability to add various color spaces or provide implementations for underlying array like custom data structures.
            .
            It is capable of reading and writing a number of popular image formats by using <https://hackage.haskell.org/package/massiv-io massiv-io> package. Being a pure Haskell library it does not require any external programs, although it can display images using a program of your choice.
homepage:          https://github.com/lehins/hip
bug-reports:       https://github.com/lehins/hip/issues
cabal-version:     >= 1.18
build-type:        Simple
extra-doc-files:   images/*.jpg
                 , images/*.png
                 , images/*.gif
                 , images/downloaded/*.gif
                 , images/*.svg
                 , README.md
                   CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/lehins/hip.git

library
  default-language: Haskell2010
  hs-source-dirs: src

  build-depends: base            >= 4.8 && < 5
               , deepseq
               , massiv          >= 0.5
               , massiv-io       >= 0.2.2
               , Color           >= 0.2.0
  other-extensions: BangPatterns
                  , CPP
                  , FlexibleContexts
                  , FlexibleInstances
                  , MultiParamTypeClasses
  exposed-modules:  Graphics.Image
                  , Graphics.Image.IO
  --                , Graphics.Image.IO.Histogram
                  , Graphics.Image.Processing
                  , Graphics.Image.Processing.Binary
                  , Graphics.Image.Processing.Complex
                  , Graphics.Image.Processing.Filter
  other-modules:   Graphics.Image.Internal
                 , Graphics.Image.Processing.Convolution
                 , Graphics.Image.Processing.Complex.Fourier
                 , Graphics.Image.Processing.Complex.Internal
                 , Graphics.Image.Processing.Geometric
                 , Graphics.Image.Processing.Interpolation
  ghc-options:     -Wall

-- test-suite tests
--   type:               exitcode-stdio-1.0
--   hs-source-dirs:     tests
--   main-is:            Spec.hs
--   other-modules:
--                     -- Graphics.Image.ColorSpaceSpec
--                      Graphics.Image.ProcessingSpec
--                    , Graphics.Image.Processing.BinarySpec
--                     -- , Graphics.Image.InterfaceSpec
--                     -- , Graphics.Image.Interface.VectorSpec
--                     -- , Graphics.Image.Interface.RepaSpec
--                     -- , Graphics.Image.IO.FormatsSpec
--   build-depends:      base            >= 4.8 && < 5
--                     , hip
--                     , massiv
--                     , massiv-test
--                     , hspec
--                     , Color
--                     , QuickCheck
--   default-language:   Haskell2010
--   ghc-options:        -Wall -threaded -with-rtsopts=-N

-- executable hip
--   main-is: Main.hs
--   hs-source-dirs:
--       app
--   ghc-options: -threaded -rtsopts -with-rtsopts=-N7 -O2
--   build-depends:
--                 base >=4.7 && <5
--               , hip
--   default-language: Haskell2010

-- benchmark filter
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             Filter.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N7 -O2
--   build-depends:       base
--                      , criterion
--                      , deepseq
--                      , hip
--                      , vector
--   default-language:    Haskell2010