name:              hip-accelerate
version:           1.0.0.0
license:           MIT
license-file:      LICENSE
author:            Alexey Kuleshevich
stability:         experimental
maintainer:        lehins@yandex.ru
category:          Parallel Image Processing
synopsis:          An Image Processing Library using Accelerate.

description:
  The Haskell Image Processing library implemented using Accelerate.
cabal-version:     >= 1.6
build-type:        Simple

library
  hs-source-dirs: src
  build-depends:  accelerate >= 0.13.0.0
                , array >= 0.5.0.0
                , base       >= 4.5      && < 5
                , hip        >= 1.0.0.0
                , vector     >= 0.9      && < 0.11
	  
  exposed-modules: Graphics.Image.Accelerate
                 , Graphics.Image.Accelerate.Pixel
--                 , Graphics.Image.Repa.Fusion
--                 , Graphics.Image.Repa.Parallel
--                 , Graphics.Image.Repa.Sequential
                 
  other-modules: Graphics.Image.Accelerate.Internal

  ghc-options: -Wall
               -Odph
               -fcpr-off
                
source-repository head
  type:     git
  location: https://github.com/lehins/hip
