name:              hip-repa
version:           1.0.0.0
license:           MIT
license-file:      LICENSE
author:            Alexey Kuleshevich
stability:         experimental
maintainer:        lehins@yandex.ru
category:          Parallel Image Processing
synopsis:          An Image Processing Library using Repa.

description:
  The Haskell Image Processing library implemented using Repa.
cabal-version:     >= 1.10
build-type:        Simple

library
  hs-source-dirs: src
  build-depends:  base   >= 4.5 && < 5
                , hip    >= 1.0.0.0
                , vector >= 0.9 && < 0.11
                , repa   >= 3.0.0.1
	  
  exposed-modules: Graphics.Image.Repa
                 , Graphics.Image.Repa.Pixel
--                 , Graphics.Image.Repa.Fusion
                 , Graphics.Image.Repa.Parallel
--                 , Graphics.Image.Repa.Sequential
                 
  other-modules: Graphics.Image.Repa.Internal

  ghc-options:
              -Wall
              -O2
              -threaded
              -rtsopts
              "-with-rtsopts=-N"
                
--  ghc-options: -Wall -rtsopts -with-rtsopts=-N -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3


executable example
  main-is:         Main.hs
  ghc-options:
              -Wall
              -O2
              -threaded
              -rtsopts
              "-with-rtsopts=-N"
  Build-Depends: base, hip-repa

source-repository head
  type:     git
  location: https://github.com/lehins/hip
